--- a/math/framework_calibrating_ecosystem_models.bib
+++ b/math/framework_calibrating_ecosystem_models.bib
@@ -453,6 +453,40 @@ eprint = {
 % Sequential Design and Optimization
 % ---------------------------------------------------------------------------------------------------
 
+@article{Mercer_kernels_IVAR,
+author = {Gorodetsky, Alex and Marzouk, Youssef},
+title = {Mercer Kernels and Integrated Variance Experimental Design: Connections Between Gaussian Process Regression and Polynomial Approximation},
+journal = {SIAM/ASA Journal on Uncertainty Quantification},
+volume = {4},
+number = {1},
+pages = {796-828},
+year = {2016},
+doi = {10.1137/15M1017119},
+URL = { 
+    
+        https://doi.org/10.1137/15M1017119
+},
+eprint = { 
+        https://doi.org/10.1137/15M1017119
+}
+}
+
+% Active Learning Cohn
+@article{COHN19961071,
+title = {Neural Network Exploration Using Optimal Experiment Design},
+journal = {Neural Networks},
+volume = {9},
+number = {6},
+pages = {1071-1083},
+year = {1996},
+issn = {0893-6080},
+doi = {https://doi.org/10.1016/0893-6080(95)00137-9},
+url = {https://www.sciencedirect.com/science/article/pii/0893608095001379},
+author = {David A. Cohn},
+keywords = {Active learning, Exploration, Optimal experiment design, Queries, Uncertainty},
+abstract = {I consider the question “How should one act when the only goal is to learn as much as possible?”. Building on the theoretical results of Fedorov (1972, Theory of Optimal Experiments, Academic Press) and MacKay (1992, Neural Computation, 4, 590–604), I apply techniques from optimal experiment design (OED) to guide the query/action selection of a neural network learner. I demonstrate that these techniques allow the learner to minimize its generalization error by exploring its domain efficiently and completely. I conclude that, while not a panacea, OED-based query/action selection has much to offer, especially in domains where its high computational costs can be tolerated. Copyright © 1996 Elsevier Science Ltd}
+}
+
 % Propose EIVAR-type criterion. 
 @article{SinsbeckNowak,
 author = {Sinsbeck, Michael and Nowak, Wolfgang},
