--- a/scripts/test/sim_study_tests.Rmd
+++ b/scripts/test/sim_study_tests.Rmd
@@ -10,7 +10,7 @@ knitr::opts_chunk$set(echo = FALSE)
 
 base_dir <- getwd()
 src_dir <- file.path(base_dir, "src")
-experiment_parent_dir <- file.path(base_dir, "output")
+experiment_parent_dir <- file.path(base_dir, "experiments")
 
 source(file.path(src_dir, "sim_study_functions.r"))
 
@@ -19,16 +19,13 @@ source(file.path(src_dir, "sim_study_functions.r"))
 
 ```{r}
 # Create experiment. 
-config <- init_experiment(experiment_id="test", experiment_type="test", 
-                          parent_dir=experiment_parent_dir, global_seed=5,
-                          set_seed=TRUE, set_global_variables=TRUE)
-print(paste0("Experiment ID: ", experiment_id))
+config <- init_experiment(experiment_id="test", experiment_type="llik_emulator_seq_design", 
+                          parent_dir=experiment_parent_dir, global_seed=5, set_seed=TRUE)
+print(paste0("Experiment ID: ", config$base_settings$experiment_id))
 
-# Remove experiment variables, so can test loading the experiment. 
-rm(list=names(config))
-config <- load_experiment(experiment_id="test", parent_dir=experiment_parent_dir, 
-                          set_seed=TRUE, set_global_variables=TRUE)
-print(paste0("Experiment ID: ", experiment_id))
+# Test loading the experiment. 
+config <- load_experiment(experiment_id="test", parent_dir=experiment_parent_dir, set_seed=TRUE)
+print(paste0("Experiment ID: ", config$base_settings$experiment_id))
 ```
 
 
