Progress on simulation study code.

--- a/scripts/test/sim_study_tests.Rmd
+++ b/scripts/test/sim_study_tests.Rmd
@@ -12,6 +12,8 @@ base_dir <- getwd()
 src_dir <- file.path(base_dir, "src")
 experiment_parent_dir <- file.path(base_dir, "experiments")
 
+experiment_id <- "test2"
+
 source(file.path(src_dir, "sim_study_functions.r"))
 
 ```
@@ -19,12 +21,14 @@ source(file.path(src_dir, "sim_study_functions.r"))
 
 ```{r}
 # Create experiment. 
-config <- init_experiment(experiment_id="test", experiment_type="llik_emulator_seq_design", 
+config <- init_experiment(experiment_id=experiment_id, experiment_type="llik_emulator_seq_design", 
                           parent_dir=experiment_parent_dir, global_seed=5, set_seed=TRUE)
 print(paste0("Experiment ID: ", config$base_settings$experiment_id))
 
 # Test loading the experiment. 
-config <- load_experiment(experiment_id="test", parent_dir=experiment_parent_dir, set_seed=TRUE)
+experiment_list <- load_experiment(experiment_id=experiment_id, parent_dir=experiment_parent_dir, set_seed=TRUE)
+config <- experiment_list$config
+status <- experiment_list$status
 print(paste0("Experiment ID: ", config$base_settings$experiment_id))
 ```
 
