Progress on experiment simulation study code.

--- a/math/MCMC with Gaussian Process Surrogates.tex
+++ b/math/MCMC with Gaussian Process Surrogates.tex
@@ -405,6 +405,7 @@ estimating the probability and how they differ with and without using the GP cov
 expectation with respect to $\ell_B$? 
 \item Effect of incorporating a quadratic trend in the GP; options: (i.) Add quadratic kernel, (ii.) Fit GP to residuals of quadratic regression, (iii.) Joint optimization 
 of quadratic mean trend and kernel hyperparameters, (iv.) Marginalized quadratic mean prior approach (see Vehtari paper) 
+\item Comparisons between log likelihood emulator and emulating forward model. 
 \end{enumerate}
 
 \bibliography{framework_calibrating_ecosystem_models} 
